corrigiendo middlewares y swagger
