# src/routes/tag.routes.js
@@ -10,28 +10,20 @@ tagRoutes.get('/', tagControllers.getTags)
 
 tagRoutes.get(
   '/:id',
-  genericMiddlewares.validateID(Tag),
   genericMiddlewares.existID(Tag),
   tagControllers.getTagById
 )
-// ruta para ver de un tag, segun su id, todos los posts que lo tienen asignado.
-/* tagRoutes.get(
-  '/:id/posts',
-  genericMiddlewares.validateID(Tag),
-  genericMiddlewares.existID(Tag),
-  tagControllers.verPosts)
- */
+
 tagRoutes.post(
   '/',
-  genericMiddlewares.validatorSchema(tagSchema),
   tagMiddlewares.existTag,
+  genericMiddlewares.validatorSchema(tagSchema),
   tagControllers.createTag
 )
 
 tagRoutes.put(
   '/:id',
   genericMiddlewares.validatorSchema(tagSchema),
-  genericMiddlewares.validateID(Tag),
   genericMiddlewares.existID(Tag),
   tagMiddlewares.existTag,
   tagControllers.updateTagById
@@ -39,7 +31,6 @@ tagRoutes.put(
 
 tagRoutes.delete(
   '/:id',
-  genericMiddlewares.validateID(Tag),
   genericMiddlewares.existID(Tag),
   tagControllers.deleteTagById
 )
